# 6dpose_visp

./: .gitignore  0721code.txt  CMakeLists.txt  README.md  TcpClient.cpp  TcpClient.h  main.cpp  sogang.cpp  sogang.h  새 텍스트 문서.txt
output/: 6DTP_first.txt  6DTP_second.txt  correction_matrix_qrr1_to_qrr2.txt
points/: first_tcp.txt  new.txt  origin.txt  qrr1_station.txt  qrr1_zig.txt  qrr2_station.txt  qrr2_zig.txt  second_tcp.txt
